# spark-connect-rs-poc

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
